--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,16 @@ server:
 logging:
   level:
     com.hcb: debug
+
+spring:
+  redis:
+    host: localhost
+    port: 6379
+    #password: 1111
+    database: 0 #默认是0号数据库，redis提供了16个数据库，从0开始
+    jedis:
+      pool:
+        max-active: 8 #最大连接数
+        max-idle: 8   #连接池最大空闲连接
+        max-wait: 4   #连接池最大阻塞等待时间
+        min-idle: 0   #连接池最小空闲链接
